# project-1-sugonyaev--25-555

./: Makefile  pyproject.toml
labyrinth_game/: consts.py  main.py  player_actions.py  utils.py
