[tool.poetry]
name = "project1-sugonyaev-m25-555"
version = "0.1.0"
description = "Labyrinth game project"
authors = ["arthuras.work <arthuras.work>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.12"
ruff = "^0.14.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"